--- a/app/views/choir_members/index.html.erb
+++ b/app/views/choir_members/index.html.erb
@@ -20,9 +20,8 @@
         <td><%= choir_member.last_name %></td>
         <td><%= choir_member.voice %></td>
         <td><%= choir_member.side %></td>
-        <td><%= link_to 'Show', choir_member %></td>
-        <td><%= link_to 'Edit', edit_choir_member_path(choir_member) %></td>
-        <td><%= link_to 'Destroy', choir_member, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +29,4 @@
 
 <br>
 
-<%= link_to 'New Choir member', new_choir_member_path %>
+<%= link_to 'New Choir member', new_user_choir_choir_member_path(1,1) %>
