--- a/app/views/choir_members/index.html.erb
+++ b/app/views/choir_members/index.html.erb
@@ -1,32 +1,25 @@
 <p id="notice"><%= notice %></p>
+<div class="large-6 large-centered columns">
 
-<h1>Listing Choir Members</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Voice</th>
-      <th>Side</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <div class="row">
+        <div class="small-9  choir-member-index ">
+          Fist Name | Last Name | Voice | side </div>
+      </div>
 
-  <tbody>
     <% @choir_members.each do |choir_member| %>
-      <tr>
-        <td><%= choir_member.first_name %></td>
-        <td><%= choir_member.last_name %></td>
-        <td><%= choir_member.voice %></td>
-        <td><%= choir_member.side %></td>
+      <div class="row">
+        <div class="small-9  choir-member-index ">
+          <%= choir_member.first_name %> | <%= choir_member.last_name %> | <%= choir_member.voice %> | <%= choir_member.side %> </div>
+
+      </div>
 
 
-      </tr>
+
     <% end %>
-  </tbody>
-</table>
 
-<br>
+
+
+</div>
 
 <%= link_to 'New Choir member', new_user_choir_choir_member_path(1,1) %>
