add new logo image and style index page

--- a/app/views/landings/landing_index.html.erb
+++ b/app/views/landings/landing_index.html.erb
@@ -1,3 +1,6 @@
+<div class="medium-3 medium-centered columns index-login-text">
+	<h2>Log In</h2>
+</div>
 <div class="large-6 large-centered columns   index-login">
   <%= form_for :session, url: sessions_path do %>
 
