--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -16,8 +16,6 @@ body {
 .name h1 img {
   width: 200px;
   height: 64px;
-  border: solid thick #FE7040;
-  border-radius: 3px;
 }
 
 .user-new-form input {
@@ -31,7 +29,6 @@ body {
   margin-top: 4em;
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.4);
-  /*height: 80%;*/
 }
 
 .index-nav-ul li button{
@@ -41,9 +38,7 @@ body {
 .choir-member-index {
    background-color: #E7E7E7;
    font-family:Verdana, Geneva, sans-serif;
-   /*font-weight: 30px;*/
    margin: .5em;
-   /*margin-left: .5em;*/
    padding: .3em;
    border-radius: 5px;
    color:  #848484;
@@ -51,4 +46,10 @@ body {
    width: 90%
 
 
+}
+
+.index-login-text h2 {
+  color: #10A6E4;
+  /*font-family:Verdana, Geneva, sans-serif;*/
+  font-family: fantasy;
 }
