--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <nav class="top-bar" data-topbar role="navigation">
       <ul class="title-area">
         <li class="name">
-          <h1><a href="/"><%= image_tag("app_logo.png") %></a></h1>
+          <h1><a href="/"><%= image_tag("logo.png") %></a></h1>
         </li>
     <section class="top-bar-section">
       <ul class="right index-nav-ul">
