--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -13,6 +13,11 @@ body {
   background-color: #FAFAFA;
 }
 
+
+.index-login label{
+  color: #FE7040;
+}
+
 .name h1 img {
   width: 200px;
   height: 64px;
@@ -27,6 +32,7 @@ body {
 
 .layout-yield {
   margin-top: 4em;
+  padding-bottom: 4em;
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.4);
 }
@@ -36,20 +42,26 @@ body {
 }
 
 .choir-member-index {
-   background-color: #E7E7E7;
-   font-family:Verdana, Geneva, sans-serif;
-   margin: .5em;
-   padding: .3em;
-   border-radius: 5px;
-   color:  #848484;
-   height: 4em;
-   width: 90%
-
-
+  background-color: #E7E7E7;
+  font-family:Verdana, Geneva, sans-serif;
+  margin: .5em;
+  padding: .3em;
+  /*padding-left: .5em;*/
+  text-align: center;
+  border-radius: 5px;
+  color:  #10A7E5;
+  height: 2em;
+  width: 90%
 }
+
+.choir-member-index-header {
+  font-weight: bold;
+  font-family: cursive;
+  color: #FE7040;
+}
+
 
 .index-login-text h2 {
   color: #10A6E4;
-  /*font-family:Verdana, Geneva, sans-serif;*/
-  font-family: fantasy;
+  font-family: "Lucida Console", Courier, monospace;;
 }
