--- a/app/views/landings/landing_index.html.erb
+++ b/app/views/landings/landing_index.html.erb
@@ -1,5 +1,5 @@
 <div class="medium-3 medium-centered columns index-login-text">
-	<h2>Log In</h2>
+	<strong><h2>Log In</h2></strong>
 </div>
 <div class="large-6 large-centered columns   index-login">
   <%= form_for :session, url: sessions_path do %>
