--- a/app/assets/stylesheets/members_list.css
+++ b/app/assets/stylesheets/members_list.css
@@ -15,3 +15,20 @@
   font-family: cursive;
   color: #FE7040;
 }
+
+.attendance-button  {
+  background-color: #DDDDDD;
+  float: right;
+  margin-right: 2em;
+  border-radius: 3px;
+  box-shadow: 10px 10px 10px 5px #888888;
+
+}
+.attendance-button a {
+  text-align: center;
+  color: rgba(59, 174, 22, 0.7);
+  /*color: #57B03B;*/
+  font-weight: bold;
+  
+
+}
