styled choir_members index

--- a/app/views/choir_members/index.html.erb
+++ b/app/views/choir_members/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 <div class="row">
   <div class="small-3 columns attendance-button" align="right">
-    <h3><%= link_to "Take Attendance", root_path %></h3>
+    <h3><%= link_to "Take Attendance",  attendances_list_path %></h3>
   </div>
 </div>
 <div class="large-6 large-centered columns">
