--- a/app/views/attendances/list.html.erb
+++ b/app/views/attendances/list.html.erb
@@ -7,18 +7,34 @@
     <% @choir_members.each do |choir_member| %>
       <div class="row">
         <div class="small-9  columns choir-attendance-index ">
-          <div><%= choir_member.first_name %> <%= choir_member.last_name %> 
-
-          	<div class=" small-1 columns att-list-button">
-          		<!-- <div class="test"> -->
-          			<!-- <p class="att-drop-down "> -->
-          				<a href="#"><i  style="color: #FE7040; margin-left: -5px; "class="fa fa-caret-down fa-2x"></i></a>
-          			<!-- </p> -->
-          		<!-- </div> -->
-          	</div>
-
-          </div>
+        	<div class=" small-1 columns att-list-button">
+        			<a href="<%= choir_member.id %>"><i  style="color: #FE7040; margin-left: -5px; "class="fa fa-caret-down fa-2x"></i></a>
+        	</div>
+		     	<%= choir_member.first_name %> <%= choir_member.last_name %> 
         </div>
+      </div>
+	      <div id="<%=choir_member.id%>" class="hidden">
+	      <div class="row">
+	      	<div class="small-6 columns">
+	      		<div class="att-option-div">
+	      			<a href=""><i class="fa fa-check fa-2x"></i></a>
+	      		</div>
+	      	</div>
+	      </div>
+	      <div class="row">
+	      	<div class="small-6 columns">
+	      		<div class="att-option-div-late">
+	      			<a href=""><i class="fa fa-clock-o fa-2x"></i></a>
+	      		</div>
+	      	</div>
+	      </div>
+	      <div class="row">
+	      	<div class="small-6 columns">
+	      		<div class="att-option-div-absent">
+	      			<a href=""><i class="fa fa-times fa-2x"></i></a>
+	      		</div>
+	      	</div>
+	      </div>
       </div>
     <% end %>
   </div>
