--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -269,7 +269,7 @@ $include-html-global-classes: $include-html-classes;
  // We use these to style anchors
  $anchor-text-decoration: none;
  $anchor-text-decoration-hover: none;
- $anchor-font-color: $primary-color;
+ $anchor-font-color: #10A7E5;
  $anchor-font-color-hover: scale-color($anchor-font-color, $lightness: -14%);
 
  // We use these to style the <hr> element
