--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -46,5 +46,7 @@ body {
 
 .index-login-text h2 {
   color: #10A6E4;
-  font-family: "Lucida Console", Courier, monospace;;
+  /*font-family: "Lucida Console", Courier, monospace;;*/
+  font-family: cursive;
 }
+
