--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <section class="top-bar-section">
       <ul class="right index-nav-ul">
         <% if logged_in? %>
-          <li class="has-form"><%= link_to "Home",root_path, class: "button" %></li>
+          <li class="has-form"><%= link_to "Home", user_choirs_path(current_user), class: "button" %></li>
           <li class="has-form"><%=  link_to "Log Out",sessions_path, method: "delete", class: "button" %></li>
         <% else %>
           <li class="has-form"><%= link_to "Sign Up",new_user_path, class: "button" %></li>
