--- a/app/views/attendances/create.html.erb
+++ b/app/views/attendances/create.html.erb
@@ -1,1 +1,18 @@
-<p>hello</p>
+
+<h2 class="choir-attendance-index-header">Members Attendance</h2>
+<% @choir_members.each do |choir_member| %>
+	<div class="row" id="<%= choir_member.id%>">
+		<div class="small-6 small-centered columns">
+	    <div class="columns choir-attendance-index">
+	     	<%= choir_member.first_name %> <%= choir_member.last_name %> 
+
+
+			<%= link_to "<i class='fa fa-times fa-lg'></i>".html_safe ,"/users/#{current_user.id}/choirs/#{@choir.id}/choir_members/#{choir_member.id}/attendees", class: "att-option-div-absent" , id: "#{choir_member.id}", method: "post" %>
+
+			<%= link_to "<i class='fa fa-clock-o fa-lg'></i>".html_safe ,"/users/ #{current_user.id} /choirs/#{@choir.id}/choir_members/#{ choir_member.id }/attendances/ #{@attendance.id }/attendees", class: "att-option-div-late" , id: "#{choir_member.id}", method: "post" %>
+
+			<%= link_to "<i class='fa fa-check fa-lg'></i></a>".html_safe ,"/users/ #{current_user.id} /choirs/#{@choir.id}/choir_members/#{ choir_member.id }/attendances/ #{@attendance.id }/attendees", class: "att-option-div" , id: "#{choir_member.id}", method: "post" %>
+	    </div>
+	  </div>
+	</div>
+<% end %>		
