--- a/app/views/landings/landing_index.html.erb
+++ b/app/views/landings/landing_index.html.erb
@@ -2,14 +2,6 @@
 	<strong><h2>Log In</h2></strong>
 </div>
 <div class="large-6 large-centered columns   index-login">
-  <%= form_for :session, url: sessions_path do %>
-
-    <%= label_tag "Email" %>
-    <%= text_field_tag "user[email]" %>
-
-    <%= label_tag "Password" %>
-    <%= password_field_tag "user[password]" %>
-    <%= submit_tag "Log in" %>
-  <%end%>
+	<%= render 'sessions/form' %>
 </div>
 
