--- a/app/views/choir_members/index.html.erb
+++ b/app/views/choir_members/index.html.erb
@@ -6,7 +6,7 @@
   </div>
 
   <div class="medium-2 columns attendance-button" align="right">
-    <h3><%= link_to "Attendance","/users/#{current_user.id}/choirs/#{@choir.id}/attendances", method: "post" %></h3>
+    <h3><%= link_to "Attendance",user_choir_attendances_path(current_user.id, @choir.id), method: "post" %></h3>
   </div>
 
 
